Tweaking ping titles and body constructs
